--- a/JS game engine/skeleton.html
+++ b/JS game engine/skeleton.html
@@ -12,6 +12,7 @@
 	<title>Retro Space Shooter</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link id="css" rel="stylesheet" href="css.css"/ >
+	<link rel="icon" href="favicon.ico">
 
 	<!-- Main game entry point - loads engine and game as modules -->
 	<script type="module" src="main.js"></script>
