Vibe: dialog system, with error dialog for failing to enter fullscreen mode
Also add some tests for this

--- a/JS game engine/skeleton.html
+++ b/JS game engine/skeleton.html
@@ -27,6 +27,14 @@
 			<div class="menu-buttons" id="menuButtons"></div>
 			<div class="menu-instructions" id="menuInstructions"></div>
 		</div>
+		<div id="dialogOverlay" class="dialog-overlay hidden">
+			<div class="dialog-box">
+				<div class="dialog-icon" id="dialogIcon">⚠️</div>
+				<div class="dialog-title" id="dialogTitle">Error</div>
+				<div class="dialog-message" id="dialogMessage">An error occurred.</div>
+				<div class="dialog-buttons" id="dialogButtons"></div>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
